# ShitGen

./: .gitignore  CMakeLists.txt  README.md
include/sgn/: Builder.hpp  ByteFile.hpp  Constant.hpp  ConstantPool.hpp  ExternModule.hpp  Function.hpp  Generator.hpp  Instruction.hpp  Macro.hpp  Memory.hpp  Operand.hpp  Specification.hpp  Structure.hpp  Type.hpp  Version.hpp
include/sgn/detail/impl/: ByteFile.hpp  ConstantPool.hpp  Generator.hpp  Operand.hpp  Structure.hpp
include/sgn/virtual/: VirtualFunction.hpp  VirtualModule.hpp
include/sgn/virtual/detail/impl/: VirtualFunction.hpp  VirtualModule.hpp
src/: Builder.cpp  ByteFile.cpp  Constant.cpp  ConstantPool.cpp  ExternModule.cpp  Function.cpp  Generator.cpp  Instruction.cpp  Memory.cpp  ShitGenVersion.cpp  Structure.cpp  Type.cpp
src/virtual/: VirtualFunction.cpp  VirtualModule.cpp
